--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,14 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+app_creation_cotisation:
+    path: /creation/cotisation
+    controller: App\Controller\CreationCotisationController::create
+    methods: [GET, POST]
+
+groupe_cotisation:
+    path: /groupe/cotisation/{id}
+    controller: App\Controller\GroupeCotisationController::index
+    requirements:
+        id: '\d+'
